<resources>
    <string name="appName">Time Zone Converter</string>
    <string name="timeZoneConverter">Time Zone Converter</string>
    <string name="currTimeZone">Current Time Zone</string>
    <string name="origTime">Original Time</string>
    <string name="homeTimeZone">Home Time Zone</string>
    <string name="convTime">Converted Time</string>
    <string name="clockImageButton">Clock Image Button</string>
    <string name="selectTime">00:00 PM</string>
    <string name="homeTime">America/Los_Angeles: GMT -08:00</string>
    <string name="convertedTime">00:00 PM</string>
    <string name="convertText">Convert!</string>
    <string name="warningDescription">Do Not Disturb Warning Sign</string>
    <string name="settingsDescription">Settings Button</string>
    <string name="homeCity">Home City</string>
    <string name="save">Save</string>
    <string name="cityName">Enter a city…</string>
    <string name="settingsHeader">Settings</string>


    <string-array name="timeZoneArray">
        <item>America/New_York: GMT -05:00</item>
        <item>America/Los_Angeles: GMT -08:00</item>
        <item>Europe/Berlin: GMT +01:00</item>
        <item>Europe/Istanbul: GMT +02:00</item>
        <item>Asia/Bangkok: GMT +07:00</item>
        <item>Asia/Singapore: GMT +08:00</item>
        <item>Asia/Tokyo: GMT +09:00</item>
        <item>Australia/Canberra: GMT +10:00</item>
    </string-array>
</resources>
