<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundColor"
    tools:context=".MainActivity"
    tools:layout_editor_absoluteX="-3dp"
    tools:layout_editor_absoluteY="0dp">

    <TextView
        android:id="@+id/timeZoneTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:text="@string/timeZoneConverter"
        android:textColor="@color/whiteColor"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/currTimeView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <View
        android:id="@+id/currTimeView"
        android:layout_width="400dp"
        android:layout_height="100dp"
        android:layout_marginTop="100dp"
        android:background="@color/whiteColor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/origTimeView"
        android:layout_width="400dp"
        android:layout_height="90dp"
        android:layout_marginTop="16dp"
        android:background="@color/whiteColor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/currTimeView" />

    <View
        android:id="@+id/homeTimeView"
        android:layout_width="400dp"
        android:layout_height="100dp"
        android:layout_marginTop="16dp"
        android:background="@color/whiteColor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/origTimeView" />

    <View
        android:id="@+id/convTimeView"
        android:layout_width="400dp"
        android:layout_height="90dp"
        android:layout_marginTop="16dp"
        android:background="@color/whiteColor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/homeTimeView" />

    <TextView
        android:id="@+id/currTimeLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="8dp"
        android:text="@string/currTimeZone"
        app:layout_constraintStart_toStartOf="@+id/currTimeView"
        app:layout_constraintTop_toTopOf="@+id/currTimeView" />

    <TextView
        android:id="@+id/origTimeLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="8dp"
        android:text="@string/origTime"
        app:layout_constraintStart_toStartOf="@+id/origTimeView"
        app:layout_constraintTop_toTopOf="@+id/origTimeView" />

    <TextView
        android:id="@+id/homeTimeLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="8dp"
        android:text="@string/homeTimeZone"
        app:layout_constraintStart_toStartOf="@+id/homeTimeView"
        app:layout_constraintTop_toTopOf="@+id/homeTimeView" />

    <TextView
        android:id="@+id/convTimeLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="8dp"
        android:text="@string/convTime"
        app:layout_constraintStart_toStartOf="@+id/convTimeView"
        app:layout_constraintTop_toTopOf="@+id/convTimeView" />

    <ImageButton
        android:id="@+id/clockButton"
        android:layout_width="140dp"
        android:layout_height="140dp"
        android:background="@color/backgroundColor"
        android:contentDescription="@string/clockImageButton"
        android:scaleType="centerInside"
        android:src="@drawable/clock"
        android:onClick="convertTime"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/convTimeView"
        app:tint="@color/whiteColor" />

    <Spinner
        android:id="@+id/timeZoneSpinner"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:entries="@array/timeZoneArray"
        app:layout_constraintBottom_toBottomOf="@+id/currTimeView"
        app:layout_constraintEnd_toEndOf="@+id/currTimeView"
        app:layout_constraintStart_toStartOf="@+id/currTimeView"
        app:layout_constraintTop_toTopOf="@+id/currTimeView"
        app:layout_constraintVertical_bias="0.65" />

    <Button
        android:id="@+id/timeButton"
        android:layout_width="237dp"
        android:layout_height="60dp"
        android:width="300dp"
        android:height="100dp"
        android:background="@color/transparentBackgroundColor"
        android:onClick="popTimePicker"
        android:text="@string/selectTime"
        android:textColor="@color/backgroundColor"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="@+id/origTimeView"
        app:layout_constraintEnd_toEndOf="@+id/origTimeView"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="@+id/origTimeView"
        app:layout_constraintTop_toTopOf="@+id/origTimeView"
        app:layout_constraintVertical_bias="0.65" />

    <TextView
        android:id="@+id/convertText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:clickable="false"
        android:fontFamily="sans-serif-black"
        android:text="@string/convertText"
        android:textColor="@color/convertColor"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/clockButton"
        app:layout_constraintEnd_toEndOf="@+id/clockButton"
        app:layout_constraintStart_toStartOf="@+id/clockButton"
        app:layout_constraintTop_toTopOf="@+id/clockButton" />

    <TextView
        android:id="@+id/homeTimeText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/homeTime"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/homeTimeView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/homeTimeView"
        app:layout_constraintTop_toTopOf="@+id/homeTimeView"
        app:layout_constraintVertical_bias="0.65" />

    <TextView
        android:id="@+id/convertedTimeText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/convertedTime"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/convTimeView"
        app:layout_constraintEnd_toEndOf="@+id/convTimeView"
        app:layout_constraintStart_toStartOf="@+id/convTimeView"
        app:layout_constraintTop_toTopOf="@+id/convTimeView"
        app:layout_constraintVertical_bias="0.65" />

    <ImageView
        android:id="@+id/warningSign"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/clockButton"
        app:layout_constraintHorizontal_bias="0.3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/convTimeView"
        app:layout_constraintVertical_bias="0.7"
        app:srcCompat="@android:drawable/stat_sys_warning"
        app:tint="@color/yellowWarningColor"
        android:contentDescription="@string/warningDescription" />

    <ImageButton
        android:id="@+id/settingsButton"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:background="@color/transparentBackgroundColor"
        android:scaleType="centerInside"
        android:onClick="viewSettings"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.8"
        app:layout_constraintStart_toEndOf="@+id/clockButton"
        app:layout_constraintTop_toBottomOf="@+id/convTimeView"
        app:layout_constraintVertical_bias="0.65"
        app:srcCompat="@drawable/gear"
        app:tint="@color/whiteColor"
        android:contentDescription="@string/settingsDescription" />

</androidx.constraintlayout.widget.ConstraintLayout>