<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundColor"
    tools:context=".SettingsActivity"
    tools:layout_editor_absoluteX="-3dp"
    tools:layout_editor_absoluteY="0dp">

    <TextView
        android:id="@+id/settingsTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:text="@string/settingsHeader"
        android:textColor="@color/whiteColor"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/homeTimeZoneSettingView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <View
        android:id="@+id/homeTimeZoneSettingView"
        android:layout_width="400dp"
        android:layout_height="100dp"
        android:layout_marginTop="100dp"
        android:background="@color/whiteColor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <View
        android:id="@+id/homeCityLabel"
        android:layout_width="400dp"
        android:layout_height="100dp"
        android:layout_marginTop="32dp"
        android:background="@color/whiteColor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.545"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/homeTimeZoneSettingView" />

    <TextView
        android:id="@+id/homeTimeZoneSettingsLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="8dp"
        android:text="@string/homeTimeZone"
        app:layout_constraintStart_toStartOf="@+id/homeTimeZoneSettingView"
        app:layout_constraintTop_toTopOf="@+id/homeTimeZoneSettingView" />

    <Spinner
        android:id="@+id/settingsTimeZoneSpinner"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:entries="@array/timeZoneArray"
        app:layout_constraintBottom_toBottomOf="@+id/homeTimeZoneSettingView"
        app:layout_constraintEnd_toEndOf="@+id/homeTimeZoneSettingView"
        app:layout_constraintStart_toStartOf="@+id/homeTimeZoneSettingView"
        app:layout_constraintTop_toTopOf="@+id/homeTimeZoneSettingView"
        app:layout_constraintVertical_bias="0.65" />

    <TextView
        android:id="@+id/homeCity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="8dp"
        android:text="@string/homeCity"
        app:layout_constraintStart_toStartOf="@+id/homeCityLabel"
        app:layout_constraintTop_toTopOf="@+id/homeCityLabel" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/editCityText"
        android:layout_width="322dp"
        android:layout_height="50dp"
        android:hint="@string/cityName"
        app:layout_constraintBottom_toBottomOf="@+id/homeCityLabel"
        app:layout_constraintEnd_toEndOf="@+id/homeCityLabel"
        app:layout_constraintStart_toStartOf="@+id/homeCityLabel"
        app:layout_constraintTop_toTopOf="@+id/homeCityLabel"
        app:layout_constraintVertical_bias="0.8" />

    <Button
        android:id="@+id/saveButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="200dp"
        android:onClick="returnToMain"
        android:text="@string/save"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/homeCityLabel" />


</androidx.constraintlayout.widget.ConstraintLayout>